# temp-mail-api

./: .gitignore  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_usage.py
temp_mail_api/: __init__.py  cli.py  client.py  exceptions.py  models.py
tests/: __init__.py  test_client.py  test_models.py
