[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "temp-mail-api"
version = "0.1.0"
description = "A Python library for temporary email services"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["email", "temporary", "api", "disposable"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "requests>=2.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=5.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/temp-mail-api"
Documentation = "https://github.com/yourusername/temp-mail-api#readme"
Repository = "https://github.com/yourusername/temp-mail-api"
Issues = "https://github.com/yourusername/temp-mail-api/issues"

[project.scripts]
temp-mail = "temp_mail_api.cli:main"

[tool.hatch.build.targets.sdist]
include = [
    "/temp_mail_api",
    "/tests",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=temp_mail_api --cov-report=html --cov-report=term-missing" 